--- a/index.html
+++ b/index.html
@@ -24,5 +24,23 @@
         </nav>
       </div>
     </header>
+    <section class="promo">
+      <div class="content-wrapper">
+        <div class="promo__content">
+          <h1>The Design Thinking superpowers</h1>
+          <p>
+            Tools, tutorials, design and innovation experts, all in one place!
+            The most intuitive way to imagine your next user experience.
+          </p>
+          <div class="poromo__buttons">
+            <button class="button button--colored">Get started</button>
+            <a href="#" class="link-button">
+              <span class="ico ico--play"></span>
+              Watch the Video
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
