--- a/index.html
+++ b/index.html
@@ -42,5 +42,22 @@
         </div>
       </div>
     </section>
+    <section class="tools">
+      <div class="content-wrapper">
+        <h2>We design tools to unveil your superpowers</h2>
+        <div class="layout-4-column">
+          <div class="tool">
+            <div class="tool__icon">
+              <span class="icon-square icon-square--lilium"></span>
+            </div>
+            <h4>First click tests</h4>
+            <p>While most people enjoy casino gambling.</p>
+          </div>
+        </div>
+        <div class="tools-button">
+          <button class="button button--colored">Sign Up now</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
