--- a/index.html
+++ b/index.html
@@ -59,5 +59,30 @@
         </div>
       </div>
     </section>
+    <section class="strategies">
+      <div class="content-wrapper">
+        <h2>Marketing Strategies</h2>
+        <p class="strategies__description">
+          Join 40,000+ other marketers and get proven strategies on email
+          marketing
+        </p>
+        <div class="strategies__tags">
+          <span class="tag tag--selected">All</span>
+          <span class="tag tag--bordered">Art</span>
+          <span class="tag">Culture</span>
+          <span class="tag">Design</span>
+        </div>
+        <div class="layout-3-column">
+          <div class="strategy block-shadowed">
+            <img src="/img/strategies/1.jpg" alt="strategy" />
+            <h3>Increasing Prosperity With Positive Thinking</h3>
+            <div class="strategies__tags">
+              <span class="tag tag--colored">Art</span>
+              <span class="tag tag--colored">Design</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
