--- a/index.html
+++ b/index.html
@@ -144,5 +144,21 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="content-wrapper">
+        <div class="layout-4-column">
+          <a href="#" class="logo">Logo</a>
+          <div class="footer-navigation">
+            <h4>Quick Links</h4>
+            <ul class="footer-navigation__links">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">FAQ</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
