--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/sass/style.css" />
   </head>
   <body>
     <header class="header">
       <div class="content-wrapper">
-        <a href="#" class="logo">Logo</a>
+        <a href="#" class="logo"
+          ><img src="/img/logo.png" alt="Produclty LCC"
+        /></a>
         <nav class="header__navigation">
           <ul class="navigation">
-            <li class="navigation__item">Home</li>
-            <li class="navigation__item">Services</li>
-            <li class="navigation__item">About</li>
-            <li class="navigation__item">Product</li>
+            <li>Home</li>
+            <li>Services</li>
+            <li>About</li>
+            <li>Product</li>
           </ul>
           <div class="header__buttons">
             <button class="button button--bordered">Sign In</button>
