feat: add h1-h5 styles

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
               Watch the Video
             </a>
           </div>
+          <img
+            src="img/promo/promo.png"
+            class="promo__image"
+            alt="The Design Thinking superpowers"
+          />
         </div>
       </div>
     </section>
