--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
   </head>
   <body>
     <header class="header">
-      <div class="content-wrapper">
+      <div class="content-wrapper header__wrapper">
         <a href="#" class="logo"
           ><img src="/img/logo.png" alt="Produclty LCC"
         /></a>
         <nav class="header__navigation">
           <ul class="navigation">
-            <li>Home</li>
-            <li>Services</li>
-            <li>About</li>
-            <li>Product</li>
+            <li class="navigation__link"><a href="#">Home</a></li>
+            <li class="navigation__link"><a href="#">Services</a></li>
+            <li class="navigation__link"><a href="#">About</a></li>
+            <li class="navigation__link"><a href="#">Product</a></li>
           </ul>
-          <div class="header__buttons">
-            <button class="button button--bordered">Sign In</button>
-            <button class="button button--colored">Sign Up</button>
-          </div>
         </nav>
+        <div class="header__buttons">
+          <button class="button button--bordered">Sign In</button>
+          <button class="button button--colored">Sign Up</button>
+        </div>
       </div>
     </header>
     <section class="promo">
-      <div class="content-wrapper">
+      <div class="content-wrapper promo__wrapper">
         <div class="promo__content">
           <h1>The Design Thinking superpowers</h1>
           <p>
@@ -159,10 +159,30 @@
     </section>
     <footer class="footer">
       <div class="content-wrapper">
-        <div class="layout-4-column">
-          <a href="#" class="logo">Logo</a>
-          <div class="footer-navigation">
-            <h4>Quick Links</h4>
+        <a href="#" class="logo"
+          ><img src="/img/logo.png" alt="Produclty LCC"
+        /></a>
+        <div class="footer-navigation layout-3-column">
+          <div class="footer-navigation__column">
+            <h4 class="footer-navigation__title">Quick Links</h4>
+            <ul class="footer-navigation__links">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">FAQ</a></li>
+            </ul>
+          </div>
+          <div class="footer-navigation__column">
+            <h4 class="footer-navigation__title">Legal Stuff</h4>
+            <ul class="footer-navigation__links">
+              <li><a href="#">Disclaimer</a></li>
+              <li><a href="#">Financing</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms of Service</a></li>
+            </ul>
+          </div>
+          <div class="footer-navigation__column">
+            <h4 class="footer-navigation__title">Quick Links</h4>
             <ul class="footer-navigation__links">
               <li><a href="#">About Us</a></li>
               <li><a href="#">Blog</a></li>
