--- a/index.html
+++ b/index.html
@@ -40,67 +40,159 @@
             Tools, tutorials, design and innovation experts, all in one place!
             The most intuitive way to imagine your next user experience.
           </p>
-          <div class="poromo__buttons">
+          <div class="promo__buttons">
             <button class="button button--colored">Get started</button>
             <a href="#" class="link-button">
               <span class="ico ico--play"></span>
-              Watch the Video
+              <span class="link-button__text">Watch the Video</span>
             </a>
           </div>
-          <img
-            src="img/promo/promo.png"
-            class="promo__image"
-            alt="The Design Thinking superpowers"
-          />
         </div>
+        <img
+          src="img/promo/promo.png"
+          class="promo__image"
+          alt="The Design Thinking superpowers"
+        />
       </div>
     </section>
     <section class="tools">
       <div class="content-wrapper">
-        <h2>We design tools to unveil your superpowers</h2>
+        <h2 class="tools__title">We design tools to unveil your superpowers</h2>
         <div class="layout-4-column">
           <div class="tool">
             <div class="tool__icon">
-              <span class="icon-square icon-square--lilium"></span>
+              <span class="icon-square icon-square_lilium">
+                <span class="ico ico_arrow"></span>
+              </span>
             </div>
             <h4>First click tests</h4>
-            <p>While most people enjoy casino gambling.</p>
+            <p>While most people enjoy casino gambling</p>
+          </div>
+          <div class="tool">
+            <div class="tool__icon">
+              <span class="icon-square icon-square_yellow">
+                <span class="ico ico_snake"></span>
+              </span>
+            </div>
+            <h4>Design surveys</h4>
+            <p>Sports betting, lottery and bingo playing for the fun</p>
+          </div>
+          <div class="tool">
+            <div class="tool__icon">
+              <span class="icon-square icon-square_red">
+                <span class="ico ico_heart"></span>
+              </span>
+            </div>
+            <h4>Preference tests</h4>
+            <p>The Myspace page defines the individual.</p>
+          </div>
+          <div class="tool">
+            <div class="tool__icon">
+              <span class="icon-square icon-square_blue">
+                <span class="ico ico_clock"></span>
+              </span>
+            </div>
+            <h4>Five second tests</h4>
+            <p>Personal choices and the overall personality of the person.</p>
           </div>
         </div>
         <div class="tools-button">
-          <button class="button button--colored">Sign Up now</button>
+          <button class="button button--colored">Sign Up Now</button>
         </div>
       </div>
     </section>
     <section class="strategies">
       <div class="content-wrapper">
-        <h2>Marketing Strategies</h2>
+        <h2 class="strategies__title">Marketing strategies</h2>
         <p class="strategies__description">
           Join 40,000+ other marketers and get proven strategies on email
           marketing
         </p>
-        <div class="strategies__tags">
-          <span class="tag tag--selected">All</span>
-          <span class="tag tag--bordered">Art</span>
-          <span class="tag">Culture</span>
-          <span class="tag">Design</span>
+        <div class="strategies__tags tags">
+          <span class="tag tag_selected">All</span>
+          <span class="tag tag_bordered">Art</span>
+          <span class="tag tag_bordered">Culture</span>
+          <span class="tag tag_bordered">Design</span>
         </div>
         <div class="layout-3-column">
-          <div class="strategy block-shadowed">
-            <img src="/img/strategies/1.jpg" alt="strategy" />
-            <h3>Increasing Prosperity With Positive Thinking</h3>
-            <div class="strategies__tags">
-              <span class="tag tag--colored">Art</span>
-              <span class="tag tag--colored">Design</span>
+          <article class="strategy block-shadowed">
+            <img
+              class="strategy__image"
+              src="./img/strategies/1.jpg"
+              alt="strategy"
+            />
+            <h3 class="strategy__name">
+              Increasing Prosperity With Positive Thinking
+            </h3>
+            <div class="strategy__tags tags">
+              <span class="tag tag_colored">Art</span>
+              <span class="tag tag_colored">Design</span>
             </div>
-          </div>
+          </article>
+          <article class="strategy block-shadowed">
+            <img
+              class="strategy__image"
+              src="./img/strategies/2.jpg"
+              alt="strategy"
+            />
+            <h3 class="strategy__name">
+              Motivation Is The First Step To Success
+            </h3>
+            <div class="strategy__tags tags">
+              <span class="tag tag_colored">Culture</span>
+            </div>
+          </article>
+          <article class="strategy block-shadowed">
+            <img
+              class="strategy__image"
+              src="./img/strategies/3.jpg"
+              alt="strategy"
+            />
+            <h3 class="strategy__name">
+              Success Steps For Your Personal Or Business Life
+            </h3>
+            <div class="strategy__tags tags">
+              <span class="tag tag_colored">Culture</span>
+              <span class="tag tag_colored">Design</span>
+              <span class="tag tag_colored">Art</span>
+            </div>
+          </article>
+          <article class="strategy strategy_wide block-shadowed">
+            <img
+              class="strategy__image"
+              src="./img/strategies/4.jpg"
+              alt="strategy"
+            />
+            <h3 class="strategy__name">
+              Success Steps For Your Personal Or Business Life Plus Funny Image
+              on the Back
+            </h3>
+            <div class="strategy__tags tags">
+              <span class="tag tag_colored">Culture</span>
+              <span class="tag tag_colored">Design</span>
+              <span class="tag tag_colored">Art</span>
+            </div>
+          </article>
+          <article class="strategy block-shadowed">
+            <img
+              class="strategy__image"
+              src="./img/strategies/5.jpg"
+              alt="strategy"
+            />
+            <h3 class="strategy__name">
+              Increasing Prosperity With Positive Thinking
+            </h3>
+            <div class="strategy__tags tags">
+              <span class="tag tag_colored">Design</span>
+            </div>
+          </article>
         </div>
       </div>
     </section>
     <section class="about-us">
       <div class="content-wrapper">
-        <h2>About Us</h2>
-        <p>
+        <h2 class="about-us__title">About Us</h2>
+        <p class="about-us__description">
           Your About Us page is vital. It’s often the first stop in any user’s
           journey through a website or blog. It also shouldn’t be their last,
           because first impressions count online just as much as they do in the
@@ -111,10 +203,30 @@
         <div class="layout-3-column">
           <div class="employee block-shadowed">
             <div class="employee__content">
-              <h5>Kathy Rosenberg</h5>
+              <h5 class="employee__name">Kathy Rosenberg</h5>
               <p class="employee__title">Product Manager</p>
               <a href="mailto:kathyr@gmail.com">kathyr@gmail.com</a>
             </div>
+            <img src="./img/employees/kathy.png" alt="Kathy Rosenberg" />
+          </div>
+          <div class="employee block-shadowed">
+            <div class="employee__content">
+              <h5 class="employee__name">Alexandra Boyarskaya</h5>
+              <p class="employee__title">Support Marketing Specialist</p>
+              <a href="mailto:alexandrab@gmail.com">alexandrab@gmail.com</a>
+            </div>
+            <img
+              src="./img/employees/alexandra.png"
+              alt="Alexandra Boyarskaya"
+            />
+          </div>
+          <div class="employee block-shadowed">
+            <div class="employee__content">
+              <h5 class="employee__name">Melani Amini</h5>
+              <p class="employee__title">Photographer</p>
+              <a href="mailto:melania@gmail.com">melania@gmail.com</a>
+            </div>
+            <img src="./img/employees/melani.png" alt="melania@gmail.com" />
           </div>
         </div>
       </div>
@@ -134,21 +246,26 @@
               newsletter, making a purchase).
             </p>
             <p>
-              <span class="ico ico--phone"></span>
-              <a href="tel:+375223450099">+375 (22) 345-00-99</a>
+              <span class="ico ico_phone"></span>
+              <a href="tel:+375111111111">+375 (22) 345-00-99</a>
             </p>
-            <span class="ico ico--letter"></span>
-            <a href="mailto:emailname@gmail.com">emailname@gmail.com</a>
+            <p>
+              <span class="ico ico_letter"></span>
+              <a href="mailto:emailname@gmail.com">emailname@gmail.com</a>
+            </p>
           </div>
           <div class="contact-us__form">
-            <form action="" method="POST">
+            <form action method="POST">
               <div class="layout-2-column">
                 <input type="text" name="name" placeholder="Your name" />
                 <input type="email" name="email" placeholder="Your email" />
               </div>
-              <textarea name="question" cols="30" rows="10"></textarea>
+              <textarea
+                name="question"
+                placeholder="What do you want to ask?"
+              ></textarea>
               <div class="contact-us__button">
-                <button class="button button--colored" type="submit">
+                <button type="submit" class="button button--colored">
                   Send
                 </button>
               </div>
@@ -160,7 +277,7 @@
     <footer class="footer">
       <div class="content-wrapper">
         <a href="#" class="logo"
-          ><img src="/img/logo.png" alt="Produclty LCC"
+          ><img src="./img/logo.png" alt="Productly LCC"
         /></a>
         <div class="footer-navigation layout-3-column">
           <div class="footer-navigation__column">
@@ -175,7 +292,7 @@
           <div class="footer-navigation__column">
             <h4 class="footer-navigation__title">Legal Stuff</h4>
             <ul class="footer-navigation__links">
-              <li><a href="#">Disclaimer</a></li>
+              <li><a href="#">Disclamer</a></li>
               <li><a href="#">Financing</a></li>
               <li><a href="#">Privacy Policy</a></li>
               <li><a href="#">Terms of Service</a></li>
