--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
   <body>
     <header class="header">
       <div class="content-wrapper header__wrapper">
-        <a href="#" class="logo"
-          ><img src="/img/logo.png" alt="Produclty LCC"
-        /></a>
+        <a href="#" class="logo">
+          <object
+            data="./img/logo.svg"
+            type="image/svg+xml"
+            class="logo-object"
+          ></object
+        ></a>
+
         <nav class="header__navigation">
           <ul class="navigation">
             <li class="navigation__link"><a href="#">Home</a></li>
