feat: add responsive for promo section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <button class="button button--colored">Get started</button>
                     <a href="#" class="link-button">
                         <span class="ico ico--play"></span>
-                        <span class="link-button--_text">Watch the Video</span>
+                        <span class="link-button__text">Watch the Video</span>
                     </a>
                 </div>
             </div>
