--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="tools">
         <div class="content-wrapper tools__wrapper">
             <h2 class="tools__title">We design tools to unveil your superpowers</h2>
-            <div class="layout-4-column">
+            <div class="layout-4-column tool-container">
                 <div class="tool">
                     <div class="tool__icon">
                         <span class="icon-square icon-square--violet">
@@ -73,8 +73,8 @@
                             <span class="ico ico--snake"></span>
                         </span>
                     </div>
-                    <h4>Design surveys</h4>
-                    <p>Sports betting, lottery and bingo playing for the fun</p>
+                    <h4 class="tool__title">Design surveys</h4>
+                    <p class="tool__text">Sports betting, lottery and bingo playing for the fun</p>
                 </div>
                 <div class="tool">
                     <div class="tool__icon">
@@ -82,8 +82,8 @@
                             <span class="ico ico--heart"></span>
                         </span>
                     </div>
-                    <h4>Preference tests</h4>
-                    <p>The Myspace page defines the individual.</p>
+                    <h4 class="tool__title">Preference tests</h4>
+                    <p class="tool__text">The Myspace page defines the individual.</p>
                 </div>
                 <div class="tool">
                     <div class="tool__icon">
@@ -91,8 +91,8 @@
                             <span class="ico ico--clock"></span>
                         </span>
                     </div>
-                    <h4>Five second tests</h4>
-                    <p>Personal choices and the overall personality of the person.</p>
+                    <h4 class="tool__title">Five second tests</h4>
+                    <p class="tool__text">Personal choices and the overall personality of the person.</p>
                 </div>
             </div>
             <div class="tools__button">
