--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
     </section>
     <footer class="footer">
         <div class="content-wrapper footer__wrapper">
-            <a href="#" class="logo"><img src="./img/logo.png" alt="Productly LCC"></a>
+            <object type="image/svg+xml" data="./img/logo.svg" class="logo-object">
+                Your browser does not support SVG
+            </object>
             <div class="footer-navigation layout-3-column">
                 <div class="footer-navigation__column">
                     <h4 class="footer-navigation__title">Quick Links</h4>
