--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="header__logo-line">
                 <span class="hamburger"><span class="hamburger__line"></span></span>
                 <a href="#" class="logo">
-                    <object type="image/svg+xml" data="./img/logo.svg" class="logo-object">
+                    <object type="image/svg+xml" data="./src/img/logo.svg" class="logo-object">
                         Your browser does not support SVG
                      </object>
                 </a>
@@ -51,7 +51,7 @@
                     </a>
                 </div>
             </div>
-            <img src="./img/promo/promo.png" class="promo__image" alt="The Design Thinking superpowers">
+            <img src="./src/img/promo/promo.png" class="promo__image" alt="The Design Thinking superpowers">
         </div>
     </section>
     <section class="tools">
@@ -112,7 +112,7 @@
             </div>
             <div class="layout-3-column strategy-wrapper">
                 <article class="strategy block-shadowed">
-                    <img class="strategy__image" src="./img/strategies/1.jpg" alt="strategy">
+                    <img class="strategy__image" src="./src/img/strategies/1.jpg" alt="strategy">
                     <div class="strategy__content">
                         <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
                         <div class="strategy__tags tags">
@@ -122,7 +122,7 @@
                     </div>
                 </article>
                 <article class="strategy block-shadowed">
-                    <img class="strategy__image" src="./img/strategies/2.jpg" alt="strategy">
+                    <img class="strategy__image" src="./src/img/strategies/2.jpg" alt="strategy">
                     <div class="strategy__content">
                         <h3 class="strategy__name">Motivation Is The First Step To Success</h3>
                         <div class="strategy__tags tags">
@@ -131,7 +131,7 @@
                     </div>
                 </article>
                 <article class="strategy block-shadowed">
-                    <img class="strategy__image" src="./img/strategies/3.jpg" alt="strategy">
+                    <img class="strategy__image" src="./src/img/strategies/3.jpg" alt="strategy">
                     <div class="strategy__content">
                         <h3 class="strategy__name">Success Steps For Your Personal Or Business Life</h3>
                         <div class="strategy__tags tags">
@@ -142,7 +142,7 @@
                     </div>
                 </article>
                 <article class="strategy strategy_wide block-shadowed">
-                    <img class="strategy__image" src="./img/strategies/4.jpg" alt="strategy">
+                    <img class="strategy__image" src="./src/img/strategies/4.jpg" alt="strategy">
                     <div class="strategy__content">
                         <h3 class="strategy__name">Success Steps For Your Personal Or Business Life Plus Funny Image on the Back</h3>
                         <div class="strategy__tags tags">
@@ -153,7 +153,7 @@
                     </div>
                 </article>
                 <article class="strategy block-shadowed">
-                    <img class="strategy__image" src="./img/strategies/5.jpg" alt="strategy">
+                    <img class="strategy__image" src="./src/img/strategies/5.jpg" alt="strategy">
                     <div class="strategy__content">
                         <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
                         <div class="strategy__tags tags">
@@ -175,7 +175,7 @@
                         <p class="employee__title">Product Manager</p>
                         <a class="employee__contact" href="mailto:kathyr@gmail.com">kathyr@gmail.com</a>
                     </div>
-                    <img class="employee__photo" src="./img/employees/kathy.png" alt="Kathy Rosenberg">
+                    <img class="employee__photo" src="./src/img/employees/kathy.png" alt="Kathy Rosenberg">
                 </div>
                 <div class="employee block-shadowed">
                     <div class="employee__content">
@@ -183,7 +183,7 @@
                         <p class="employee__title">Support Marketing Specialist</p>
                         <a class="employee__contact" href="mailto:alexandrab@gmail.com">alexandrab@gmail.com</a>
                     </div>
-                    <img class="employee__photo" src="./img/employees/alexandra.png" alt="Alexandra Boyarskaya">
+                    <img class="employee__photo" src="./src/img/employees/alexandra.png" alt="Alexandra Boyarskaya">
                 </div>
                 <div class="employee block-shadowed">
                     <div class="employee__content">
@@ -191,7 +191,7 @@
                         <p class="employee__title">Photographer</p>
                         <a class="employee__contact" href="mailto:melania@gmail.com">melania@gmail.com</a>
                     </div>
-                    <img class="employee__photo" src="./img/employees/melani.png" alt="Melani Amini">
+                    <img class="employee__photo" src="./src/img/employees/melani.png" alt="Melani Amini">
                 </div>
             </div>
         </div>
@@ -228,7 +228,7 @@
     </section>
     <footer class="footer">
         <div class="content-wrapper footer__wrapper">
-            <object type="image/svg+xml" data="./img/logo.svg" class="logo-object">
+            <object type="image/svg+xml" data="./src/img/logo.svg" class="logo-object">
                 Your browser does not support SVG
             </object>
             <div class="footer-navigation layout-3-column">
